# hyperliquid-arbitrage-bot

./: Dockerfile  PRIORITY_TASKS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_README.md  PROGRESS_REPORT.md  README.md  backtesting_engine.py  check-system.js  config.json  docker-compose.yml  package-lock.json  package.json  prometheus.yml  requirements-dev.txt  requirements.txt  tsconfig.feeds.json  tsconfig.json  tsconfig.refinement.json  vitest.config.ts
config/: runtime_config.json  sample.env  strategies.json
contracts/: ArbitrageExecutor.sol  HyperliquidArbitrageEngine.sol
data/: backtests.json  strategies.json
python-backend/app/: config_store.py  deepseek_client.py  executor.py  goldrush_client.py
research/: backtest_np.py  data_loader.py  optimize_scipy.py  plots.py
rust-engine/: Cargo.toml
rust-engine/src/: main.rs
scripts/: deploy.sh  flashloan.ts  seed_strategy.ts  setup_and_run.ps1  smoke_eval.ts
src/api/: app.ts  arb.ts  server.ts  state.ts
src/chain/: providers.ts  univ3_abi.ts  univ3_fetch.ts
src/config/: env.ts
src/core/: arb_orchestrator.ts
src/data/: goldrush.ts  markets.ts
src/eval/: arb_math.ts  latency.ts  model.ts  montecarlo.ts  slippage.ts  types.ts  univ3_math.ts
src/execution/: ExecutionEngine.ts  ExecutionManager.ts  ExecutionStrategies.ts  HyperliquidClient.ts  SignalExecutor.ts  types.ts  (+2 more)
tests/: latency.spec.ts  model.flash.spec.ts  model.spec.ts  slippage.spec.ts  strategyApi.spec.ts  strategyGate.spec.ts  univ3.spec.ts  univ3_math_validation.spec.ts
tools/: engine_shim.py
web/: app.js  index.html  styles.css
(+43 files in other folders)
