[package]
name = "hyperliquid-arb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["clock", "std"] }
